# mcp-tripwire

./: .agents-cli-spec.md  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  STATUS.md  agents-cli-manifest.yaml  pyproject.toml
.agents/workflows/: finish-issue.md  start-issue.md  threat-model.md
.claude/: settings.json
.gemini/commands/: issue-trust-badge.toml  scan-mcp-server.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.yml
.github/workflows/: ai-review.yml  ci.yml  security.yml
app/: __init__.py  agent.py  fast_api_app.py  sse_adapter.py
app/app_utils/: telemetry.py
corpus/: attacks.jsonl
docs/: AGENTIC_SDLC.md  ARCHITECTURE.md  BACKLOG.md  OWASP_MCP_COVERAGE.md  README.md  ROADMAP.md  SPEC.md  STATUS.md  SUBMISSION_CHECKLIST.md  TECH_DEBT.md  TRUST_MODEL.md  video-script.md  writeup.md
docs/adr/: ADR-0001-mcp-trust-gateway.md  ADR-0003-signed-attestations.md  ADR-0004-secret-and-payload-hygiene.md  ADR-0005-two-layer-verification.md  _TEMPLATE.md
docs/features/: README.md  adk-multi-agent-layer.md  attack-corpus-runner.md  cli-scan-verify-ci.md  descriptor-scanning.md  drift-quarantine.md  ed25519-signing.md  http-gateway.md  http-sse-proxy-transport.md  owasp-mcp-mapping.md  sarif-output.md  signed-trust-badges.md  stdio-mcp-proxy.md
docs/plans/: SPRINT-2026-06-27-to-2026-07-05.md  _TEMPLATE.md
docs/rfc/: RFC-0001-e2-stdio-proxy-bridge.md  RFC-0002-ed25519-signing.md  RFC-0003-sarif-output.md  RFC-0004-http-sse-proxy-transport.md
docs/runbooks/: adk-live-playground-demo.md  demo-proof-moment.md  deploy.md  pr-watchdog.md  real-world-agent-demo.md  sarif-in-gh-actions.md
examples/: demo.py  demo_adk.py  demo_proxy.py  demo_proxy_sse.py  demo_real_mcp_playwright.py  vulnerable_mcp_server.py
scripts/: check_features_diff_coverage.sh  ci-local.sh  harness_guardrails.py  no_commit_to_main.sh  pr-watchdog.sh
src/tripwire/: __init__.py  attestation.py  cli.py  corpus.py  detection.py  engine.py  owasp.py  proxy.py  sarif.py
tests/eval/: eval_config.yaml  metrics.py
tests/integration/: test_attestation_mixed.py  test_demo_adk_script.py  test_http_endpoints.py  (+6 more)
(+30 files in other folders)
